--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,12 +1,19 @@
 <script>
 (function() {
     document.querySelector('body > .footer').remove();
-    const wikiLink = document.querySelector('#menu > li > a[href$="Webmin/Main_Page"]'),
-        searchLink = document.querySelector('#menu > li > a[href$="/search/"] > span'),
+    const
+        menuLinkTargSel = '.header > .nav #menu > li > a',
+        postsLinksTargSel = '.main .post-content a',
+        wikiLink = document.querySelector('' + menuLinkTargSel + '[href$="Webmin/Main_Page"]'),
+        searchLink = document.querySelector('' + menuLinkTargSel + '[href$="/search/"] > span'),
         outerlinksAll = [
-            document.querySelectorAll('.main .post-content a[href^="https://github.com/"]'),
-            document.querySelectorAll('.main .post-content a[href^="https://www.webmin.com/download/"]'),
+            document.querySelectorAll('' + postsLinksTargSel + '[href*="webmin.com/download/"]'),
+            document.querySelectorAll('' + postsLinksTargSel + '[href*="doxfer.webmin.com"]'),
+            document.querySelectorAll('' + postsLinksTargSel + '[href*="github.com"]'),
+            document.querySelectorAll('' + postsLinksTargSel + '[href*="facebook.com"]'),
+            document.querySelectorAll('' + postsLinksTargSel + '[href*="youtube.com"]'),
         ];
+
     // Wiki to new window
     wikiLink.setAttribute('target', '_blank');
 
@@ -26,7 +33,7 @@
         return location && typeof location.pathname === 'string' && location.pathname.includes('/' + test + '/');
     }
     if (isLocation('changelog') || isLocation('archives')) {
-        document.querySelector('.header > .nav #menu a[href$="changelog/"] > span').classList.add('active');
+        document.querySelector('' + menuLinkTargSel + '[href$="changelog/"] > span').classList.add('active');
     }
 
     // Main page tweaks
@@ -37,12 +44,11 @@
     if (mainPageSocials) {
         mainPageSocials.innerHTML = ghStarsHTML + ghWatchHTML + ghForkHTML;
     }
-
-
-
 })();
 </script>
-</script>
 <footer class="footer">
-    <span>&copy; 1997 - {{ now.Year }} <a href="{{ "" | absLangURL }}">{{ site.Title }}</a>&nbsp;&nbsp;|&nbsp;&nbsp;Made with&nbsp;&nbsp;❤️&nbsp;&nbsp;by <a href="https://github.com/iliajie" target="_blank">@iliajie</a>&nbsp;&nbsp;|&nbsp;&nbsp;Powered by Hugo & Papermod</span>
+    <div>
+        <a href="{{ "" | absLangURL }}about">About</a>&nbsp;&nbsp;|<wbr>
+    </div>
+    <span>&copy; 1997 - {{ now.Year }} <a href="{{ "" | absLangURL }}">{{ site.Title }}</a>&nbsp;&nbsp;|<wbr>&nbsp;&nbsp;Made with&nbsp;&nbsp;<i class="wm wm-heart"></i>&nbsp;&nbsp;by <a href="https://github.com/iliajie" target="_blank">@iliajie</a>&nbsp;&nbsp;|<wbr>&nbsp;&nbsp;Powered by Hugo & Papermod</span>
 </footer>
