Update footer script to open devel builds links in new tab

--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -8,7 +8,9 @@
         searchLink = document.querySelector('' + menuLinkTargSel + '[href$="/search/"] > span'),
         outerlinksAll = [
             document.querySelectorAll('' + postsLinksTargSel + '[href*="webmin.com/download/"]'),
+            document.querySelectorAll('' + postsLinksTargSel + '[href*="download.webmin.com/devel"]'),
             document.querySelectorAll('' + postsLinksTargSel + '[href*="doxfer.webmin.com"]'),
+            document.querySelectorAll('' + postsLinksTargSel + '[href*="builds.webmin.dev"]'),
             document.querySelectorAll('' + postsLinksTargSel + '[href*="github.com"]'),
             document.querySelectorAll('' + postsLinksTargSel + '[href*="facebook.com"]'),
             document.querySelectorAll('' + postsLinksTargSel + '[href*="youtube.com"]'),
