Fix to support HTML in accordions

--- a/layouts/shortcodes/details-start.html
+++ b/layouts/shortcodes/details-start.html
@@ -5,7 +5,7 @@
         <span class="details">
         {{ range .Params }}
           {{ if ne $class . }}
-            {{ . }}
+            {{ . | safeHTML }}
           {{ end }}
         {{ end }}
         </span>
