--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -49,8 +49,9 @@
 </script>
 <footer class="footer">
     <div>
-        <a href="{{ "" | absLangURL }}about">About</a>&nbsp;&nbsp;|<wbr>&nbsp;&nbsp;
-        <a href="{{ "" | absLangURL }}security">Security</a>&nbsp;&nbsp;
+        <a href="{{ "" | absLangURL }}about">About</a>&nbsp;&nbsp;<wbr>&nbsp;&nbsp;
+        <a href="{{ "" | absLangURL }}security">Security</a>&nbsp;&nbsp;<wbr>&nbsp;&nbsp;
+        <a href="{{ "" | absLangURL }}languages">Supported Languages</a>&nbsp;&nbsp;<wbr>&nbsp;&nbsp;
     </div>
     <span>&copy; 1997 - {{ now.Year }} <a href="{{ "" | absLangURL }}">{{ site.Title }}</a>&nbsp;&nbsp;|<wbr>&nbsp;&nbsp;Made with&nbsp;&nbsp;<i class="wm wm-heart"></i>&nbsp;&nbsp;by <a href="https://github.com/iliajie" target="_blank">@iliajie</a>&nbsp;&nbsp;|<wbr>&nbsp;&nbsp;Powered by Hugo & Papermod</span>
 </footer>
