--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -108,6 +108,12 @@ button#theme-toggle {
     font-size: 24px;
 }
 
+.wm-md {
+    font-size: 1.166em;
+    vertical-align: -2%
+}
+
+
 /* Header logos */
 body .logo .logo-switches svg path,
 body .logo>a>svg path {
