--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,13 +1,14 @@
 <script>
 (function() {
     const
-        menuLinkTargSel = '.header > .nav #menu > li > a',
+        headerTargSel = 'body > .header',
+        menuLinkTargSel = '' + headerTargSel + ' > .nav #menu > li > a',
         postsLinksTargSel = '.main .post-content a',
-        wikiLink = document.querySelector('' + menuLinkTargSel + '[href$="Webmin/Main_Page"]'),
         searchLink = document.querySelector('' + menuLinkTargSel + '[href$="/search/"] > span'),
         hmenuLink = document.querySelector('' + menuLinkTargSel + '[href$="/hmenu/"]'),
         hmenuLinkText = hmenuLink.querySelector('span'),
         outerlinksAll = [
+            document.querySelectorAll('' + menuLinkTargSel + '[href$="Webmin/Main_Page"]'),
             document.querySelectorAll('' + postsLinksTargSel + '[href*="webmin.com/download/"]'),
             document.querySelectorAll('' + postsLinksTargSel + '[href*="download.webmin.com/devel"]'),
             document.querySelectorAll('' + postsLinksTargSel + '[href*="doxfer.webmin.com"]'),
@@ -17,18 +18,40 @@
             document.querySelectorAll('' + postsLinksTargSel + '[href*="youtube.com"]'),
         ];
 
-    // Wiki to new window
-    wikiLink.setAttribute('target', '_blank');
-
     // Search link as icon
     searchLink.classList.add('wm', 'wm-search');
     searchLink.innerHTML = String();
 
-    // Search link as icon
+    // Custom dropdown menu
+    const hmenu_html = '{{- partial "hmenu.html" . }}',
+        hmenuResize = function() {
+            const hmenuRightOffset = window.innerWidth - hmenuLinkText.getBoundingClientRect().right;
+            hmenuLink.querySelector('.hmenu-panel > .hmenu-drop-down').style.right = hmenuRightOffset - 19.4 + "px";
+        };
     hmenuLinkText.classList.add('wm', 'wm-md', 'wm-menu');
     hmenuLinkText.innerHTML = String();
     hmenuLink.setAttribute('href', 'javascript:;');
     hmenuLink.removeAttribute('title');
+    hmenuLink.addEventListener("click", function() {
+        var isHmenu = hmenuLink.querySelector('.hmenu-panel');
+        // Remove it
+        if (isHmenu) {
+            isHmenu.remove();
+            hmenuLinkText.classList.remove('active');
+        }
+        // Append new
+        else {
+            hmenuLink.insertAdjacentHTML('beforeend', hmenu_html);
+            hmenuLinkText.classList.add('active');
+            hmenuResize();
+        }
+    });
+
+    // Resize actions for the page
+    window.onresize = function() {
+        hmenuResize();
+    }
+
 
     // Outer links to new window
     outerlinksAll.forEach(function(outerlinks) {
@@ -56,10 +79,5 @@
 })();
 </script>
 <footer class="footer">
-    <div>
-        <a href="{{ "" | absLangURL }}about">About</a>&nbsp;&nbsp;<wbr>&nbsp;&nbsp;
-        <a href="{{ "" | absLangURL }}security">Security</a>&nbsp;&nbsp;<wbr>&nbsp;&nbsp;
-        <a href="{{ "" | absLangURL }}languages">Supported Languages</a>&nbsp;&nbsp;<wbr>&nbsp;&nbsp;
-    </div>
     <span>&copy; 1997 - {{ now.Year }} <a href="{{ "" | absLangURL }}">{{ site.Title }}</a>&nbsp;&nbsp;|<wbr>&nbsp;&nbsp;Made with&nbsp;&nbsp;<i class="wm wm-heart"></i>&nbsp;&nbsp;by <a href="https://github.com/iliajie" target="_blank">@iliajie</a>&nbsp;&nbsp;|<wbr>&nbsp;&nbsp;Powered by Hugo & Papermod</span>
 </footer>
