--- a/layouts/partials/hmenu.html
+++ b/layouts/partials/hmenu.html
@@ -1,4 +1,4 @@
-<div class="hmenu-panel">
+<div class="hmenu-panel" data-click-outside="true" data-reference="hmenu-panel-opener">
   <div class="hmenu-drop-down">
       <div class="hmenu-body">
           <div class="hmenu-body-contents">
