--- a/layouts/partials/hmenu.html
+++ b/layouts/partials/hmenu.html
@@ -4,10 +4,10 @@
           <div class="hmenu-body-contents">
               <div class="hmenu-container">
                   <ul class="hmenu-links">
-                      <li><a href="../about"><span>About</span></a></li>
-                      <li><a href="../screenshots"><span>Screenshots</span></a></li>
-                      <li><a href="../community"><span>Community</span></a></li>
-                      <li><a href="../faq"><span>FAQ</span></a></li>
+                      <li><a href="/about"><span>About</span></a></li>
+                      <li><a href="/screenshots"><span>Screenshots</span></a></li>
+                      <li><a href="/community"><span>Community</span></a></li>
+                      <li><a href="/faq"><span>FAQ</span></a></li>
                   </ul>
                   <div class="clearfix"></div>
                   <hr>
@@ -15,21 +15,21 @@
               <ul class="hmenu-categories">
                   <li class="hmenu-category">
                     <span>
-                      <a href="../usermin">
+                      <a href="/usermin">
                         <i class="wm wm-fw wm-md wm-webmin icon-usermin"></i>&nbsp;Usermin
                       </a>
                     </span>
                   </li>
                   <li class="hmenu-category">
                     <span>
-                      <a href="../virtualmin">
+                      <a href="/virtualmin">
                         <i class="wm wm-fw wm-md wm-virtualmin icon-virtualmin"></i>&nbsp;Virtualmin
                       </a>
                     </span>
                   </li>
                   <li class="hmenu-category">
                     <span>
-                      <a href="../cloudmin">
+                      <a href="/cloudmin">
                         <i class="wm wm-fw wm-md wm-cloudmin icon-cloudmin"></i>&nbsp;Cloudmin
                       </a>
                     </span>
@@ -39,13 +39,13 @@
               <div class="hmenu-container">
                   <ul class="hmenu-links">
                       <li>
-                        <a href="../download/#standard-modules"><span>Standard Modules</span></a>
+                        <a href="/download/#standard-modules"><span>Standard Modules</span></a>
                       </li>
                       <li>
-                        <a href="../about/#supported-systems"><span>Supported Systems</span></a>
+                        <a href="/about/#supported-systems"><span>Supported Systems</span></a>
                       </li>
                       <li>
-                        <a href="../about/#supported-languages"><span>Supported Languages</span></a>
+                        <a href="/about/#supported-languages"><span>Supported Languages</span></a>
                       </li>
                   </ul>
                   <div class="clearfix"></div>
