Add Books link and fix `books.md` ; link and remove `contrib.md`

--- a/layouts/partials/hmenu.html
+++ b/layouts/partials/hmenu.html
@@ -9,6 +9,7 @@
                       <li><a href="/community/"><span>Community</span></a></li>
                       <li><a href="/faq/"><span>FAQ</span></a></li>
                       <li><a href="/partners/"><span>Partners</span></a></li>
+                      <li><a href="/books/"><span>Books</span></a></li>
                   </ul>
                   <div class="clearfix"></div>
                   <hr>
