--- a/layouts/partials/hmenu.html
+++ b/layouts/partials/hmenu.html
@@ -8,7 +8,7 @@
                       <li><a href="/screenshots/"><span>Screenshots</span></a></li>
                       <li><a href="/community/"><span>Community</span></a></li>
                       <li><a href="/faq/"><span>FAQ</span></a></li>
-                      <li><a href="/partners/"><span>Partners</span></a></li>
+                      <li><a href="/supporters/"><span>Supporters</span></a></li>
                       <li><a href="/books/"><span>Books</span></a></li>
                   </ul>
                   <div class="clearfix"></div>
