--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -118,5 +118,5 @@
 })();
 </script>
 <footer class="footer">
-    <span>&copy; 1997 - {{ now.Year }} <a href="/">{{ site.Title }}</a>&nbsp;&nbsp;|<wbr>&nbsp;&nbsp;Made with&nbsp;&nbsp;<i class="wm wm-heart"></i>&nbsp;&nbsp;by <a href="https://github.com/iliajie" target="_blank">@iliajie</a>&nbsp;&nbsp;|<wbr>&nbsp;&nbsp;Powered by Hugo & Papermod</span>
+    <span>&copy; 1997 - {{ now.Year }} <a href="/">{{ site.Title }}</a>&nbsp;&nbsp;|<wbr>&nbsp;&nbsp;Made with&nbsp;&nbsp;<i class="wm wm-heart"></i>&nbsp;&nbsp;by <a href="/about/#developers">@iliajie</a>&nbsp;&nbsp;|<wbr>&nbsp;&nbsp;Powered by Hugo & Papermod</span>
 </footer>
