--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -66,7 +66,10 @@ strong code {
     font-weight: 600;
 }
 .post-title {
-    font-size: 36px;
+    font-size: 32px;
+}
+.post-content h2 {
+    font-size: 29px;
 }
 .post-content h4 {
     font-size: 20px;
