--- a/layouts/partials/hmenu.html
+++ b/layouts/partials/hmenu.html
@@ -10,6 +10,7 @@
                       <li><a href="/faq/"><span>FAQ</span></a></li>
                       <li><a href="/supporters/"><span>Supporters</span></a></li>
                       <li><a href="/books/"><span>Books</span></a></li>
+                      <li><a href="/tags/"><span>Tags</span></a></li>
                   </ul>
                   <div class="clearfix"></div>
                   <hr>
