--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,7 +1,18 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ if hugo.IsProduction | or (eq site.Params.env "production") }}{{ site.Params.analytics.google.trackingCode.production }}{{ else }}{{ site.Params.analytics.google.trackingCode.devel }}{{ end }}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', '{{ if hugo.IsProduction | or (eq site.Params.env "production") }}{{ site.Params.analytics.google.trackingCode.production }}{{ else }}{{ site.Params.analytics.google.trackingCode.devel }}{{ end }}');
+</script>
+
 <!-- https://fonts.google.com/share?selection.family=Roboto%20Condensed:wght@400;700%7CRoboto%20Mono:wght@300;600%7CRoboto:ital,wght@0,300;0,500;1,300;1,500 -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto+Mono:wght@300;600&family=Roboto:ital,wght@0,300;0,500;1,300;1,500&display=swap" rel="stylesheet">
+
+<!-- Mark page to be accessible in JavaScript -->
 <script type="text/javascript">
     document.querySelector('html').classList.add("page-" + location.pathname.replace(/\//g, ''))
 </script>
