Fix production site detection

--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,10 +1,10 @@
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ if hugo.IsProduction | or (eq site.Params.env "production") }}{{ site.Params.analytics.google.trackingCode.production }}{{ else }}{{ site.Params.analytics.google.trackingCode.devel }}{{ end }}"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ if (eq site.Params.env "production") }}{{ site.Params.analytics.google.trackingCode.production }}{{ else }}{{ site.Params.analytics.google.trackingCode.devel }}{{ end }}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', '{{ if hugo.IsProduction | or (eq site.Params.env "production") }}{{ site.Params.analytics.google.trackingCode.production }}{{ else }}{{ site.Params.analytics.google.trackingCode.devel }}{{ end }}');
+  gtag('config', '{{ if (eq site.Params.env "production") }}{{ site.Params.analytics.google.trackingCode.production }}{{ else }}{{ site.Params.analytics.google.trackingCode.devel }}{{ end }}');
 </script>
 
 <!-- https://fonts.google.com/share?selection.family=Roboto%20Condensed:wght@400;700%7CRoboto%20Mono:wght@300;600%7CRoboto:ital,wght@0,300;0,500;1,300;1,500 -->
